// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view returns array with array literal 1`] = `
Array [
  "Hello World!",
  Object {
    "children": Array [
      "Second Element",
    ],
    "props": Object {},
    "type": "div",
  },
  Object {
    "children": Array [
      "Third Element",
    ],
    "props": Object {},
    "type": "span",
  },
]
`;

exports[`view returns array with fragment 1`] = `
Array [
  "Hello World!",
  Object {
    "children": Array [
      "Second Element",
    ],
    "props": Object {},
    "type": "div",
  },
  Object {
    "children": Array [
      "Third Element",
    ],
    "props": Object {},
    "type": "span",
  },
]
`;

exports[`view returns basic virtual dom 1`] = `
Object {
  "children": Array [
    "Basic static element",
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`view returns basic virtual dom from function 1`] = `
Object {
  "children": Array [
    "Basic dynamic element",
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`view returns component contents 1`] = `
Object {
  "children": Array [
    "Component",
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`view returns component function contents 1`] = `
Object {
  "children": Array [
    "Component contents",
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`view returns component function contents with children 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Component child",
      ],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {},
  "type": "div",
}
`;

exports[`view returns component function contents with props 1`] = `
Object {
  "children": Array [
    "Component contents",
  ],
  "props": Object {
    "prop": "value",
  },
  "type": "div",
}
`;

exports[`view returns component function contents with props and children 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Component child",
      ],
      "props": Object {},
      "type": "div",
    },
  ],
  "props": Object {
    "prop": "value",
  },
  "type": "div",
}
`;

exports[`view returns number 1`] = `1000`;

exports[`view returns string 1`] = `"string"`;
